--- a/public/project/project.html
+++ b/public/project/project.html
@@ -62,9 +62,14 @@
                     </ul>
                 </div>
             </nav>
-            <div class="col-12 project-header pl-5">
-                <p class="project-title mt-5 mb-0" data-project-topic>Construction/Rehabilitation Of Abia Road</p>
-                <span class="font-12px" data-project-contractor>Not Specified</span>
+            <div class="col-12 project-header row mx-0 pl-5">
+                <div class="col-12 col-md-6">
+                    <p class="project-title mt-5 mb-0" data-project-topic>Construction/Rehabilitation Of Abia Road</p>
+                    <span class="font-12px" data-project-contractor>Not Specified</span>
+                </div>
+                <div class="col-12 col-md-6 text-right">
+                    <h5 class="mt-5">Project Type: <span data-project-type>Health</span></h5>
+                </div>
             </div>
             <div class="col-12 project-full">
                 <ul class="nav nav-pills mb-3 ml-5" id="pills-tab" role="tablist">
@@ -82,14 +87,16 @@
                         aria-labelledby="summary-tab">
                         <div class="col-12 col-md-11 mx-auto row mx-0 project-detailed">
                             <div class="col-12 col-md-7 project-data mt-2">
-                                <span class="last-updated grey font-12px">Project last updated: <span data-project-updated>10/07/2019</span></span>
+                                <span class="last-updated grey font-12px">Project last updated: <span
+                                        data-project-updated>10/07/2019</span></span>
                                 <p class="total-budget font-12px grey bold mb-2 mt-5">Total Budget: <span
                                         class="stat-value" data-project-budget>N200,000,000</span></p>
-                                <p class="project-id font-12px grey bold mb-2">Project ID: <span
-                                        class="stat-value" data-project-id>12354739</span></p>
-                                <p class="start-date font-12px grey bold mb-2">Start Date: <span
-                                        class="stat-value" data-project-created>10/11/2019</span></p>
-                                <p class="col-12 px-0 font-12px grey"  data-project-desc>Lorem ipsum dolor sit, amet consectetur
+                                <p class="project-id font-12px grey bold mb-2">Project ID: <span class="stat-value"
+                                        data-project-id>12354739</span></p>
+                                <p class="start-date font-12px grey bold mb-2">Start Date: <span class="stat-value"
+                                        data-project-created>10/11/2019</span></p>
+                                <p class="col-12 px-0 font-12px grey" data-project-desc>Lorem ipsum dolor sit, amet
+                                    consectetur
                                     adipisicing elit.
                                     Ratione doloribus, magni alias distinctio impedit iusto quis praesentium quibusdam
                                     id ab,
@@ -101,10 +108,10 @@
                                     Asperiores non accusamus obcaecati voluptatum, ipsum magni.</p>
                             </div>
                             <div class="col-12 col-md-5 location-map mt-2">
-                                <p class="total-budget font-12px grey bold mb-2 mt-4">Location: <span
-                                        class="stat-value" data-project-location>Port Harcourt</span></p>
+                                <p class="total-budget font-12px grey bold mb-2 mt-4">Location: <span class="stat-value"
+                                    data-project-location>Port Harcourt</span></p>
                                 <div class="col-12 col-md-9 embedded-map border px-0">
-                                    <iframe  data-project-location-map id="gmap_canvas"
+                                    <iframe data-project-location-map id="gmap_canvas"
                                         src="https://maps.google.com/maps?q=port%20harcourt&t=&z=13&ie=UTF8&iwloc=&output=embed"
                                         frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                                 </div>
@@ -128,13 +135,14 @@
                                         <p class="grey bold font-12px mt-2">Budget Title: Not Specified</p>
                                     </div>
                                     <div class="budget-data col-12 px-2">
-                                        <span class="grey font-12px">Spent: <span
-                                                class="stat-value" data-project-budget-spent>N50,000,000</span></span> <br>
-                                        <span class="grey font-12px">Start Date: <span
-                                                class="stat-value" data-project-created_2>10/11/2019</span></span>
+                                        <span class="grey font-12px">Spent: <span class="stat-value"
+                                                data-project-budget-spent>N50,000,000</span></span> <br>
+                                        <span class="grey font-12px">Start Date: <span class="stat-value"
+                                            data-project-created-2>10/11/2019</span></span>
                                     </div>
                                 </div>
-                                <p class="budget-desc px-0 col-12 font-12px mt-3 grey" data-project-desc-2>Lorem ipsum dolor sit amet
+                                <p class="budget-desc px-0 col-12 font-12px mt-3 grey" data-project-desc_2>Lorem ipsum
+                                    dolor sit amet
                                     consectetur adipisicing elit.
                                     Aperiam, molestias? Optio expedita doloribus veritatis porro quam asperiores
                                     possimus
@@ -144,7 +152,8 @@
                                     voluptatem,
                                     alias quod dolore error voluptas enim quae autem culpa dolor deleniti veritatis?</p>
                                 <p class="contractor-header bold grey">Contractors</p>
-                                <p class="contractor-desc px-0 col-12 font-12px grey mt-3"  data-project-contractors-info>Details about contractor [Not Specified]</p>
+                                <p class="contractor-desc px-0 col-12 font-12px grey mt-3"
+                                    data-project-contractors-info>Details about contractor [Not Specified]</p>
                                 <button class="btn btn-brand font-12px" data-project-download>Download CSV</button>
                             </div>
                             <div class="project-gallery col-12 row mx-0">
@@ -165,19 +174,24 @@
                             </div>
                             <div class="project-activity col-12 col-md-4 row mx-0 mb-5">
                                 <div class="col text-center px-0">
-                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-thumbs-up"></i> <span data-project-like></span> 200</span>
+                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-thumbs-up"></i> <span
+                                            data-project-like></span></span>
                                 </div>
                                 <div class="col text-center px-0">
-                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-thumbs-down"></i> <span data-project-dislike></span> 59</span>
+                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-thumbs-down"></i> <span
+                                        data-project-dislike></span></span>
                                 </div>
                                 <div class="col text-center px-0">
-                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-comments"></i> <span data-project-comment></span> 5</span>
+                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-comments"></i> <span
+                                            data-project-comment></span></span>
                                 </div>
                                 <div class="col text-center px-0">
-                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-share"></i> <span data-project-share></span> Share</span>
+                                    <span class="grey font-12px"><i class="fa fas fa-2x fa-share"></i> <span
+                                            data-project-share></span> Share</span>
                                 </div>
                                 <div class="col text-center px-0">
-                                    <span class="grey font-12px" data-project-save><i class="fa fas fa-2x fa-save"></i> Save</span>
+                                    <span class="grey font-12px" data-project-save><i class="fa fas fa-2x fa-save"></i>
+                                        Save</span>
                                 </div>
                             </div>
                         </div>
@@ -191,8 +205,8 @@
                                 <div class="col-12 col-md-11 comment-submit">
                                     <form data-project-comment>
                                         <div class="form-group mb-1">
-                                            <textarea name="comment" class="col-12 mt-4 pl-4 scroller" type="text" class="form-control"
-                                                placeholder="Add a public comment"></textarea>
+                                            <textarea name="comment" class="col-12 mt-4 pl-4 scroller" type="text"
+                                                class="form-control" placeholder="Add a public comment"></textarea>
                                             <span name="anonymous" style="visibility: hidden;">Anonymous</span>
                                         </div>
                                         <div class="col-12 text-right">
