--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -38,7 +38,7 @@
                         <li class="nav-item mx-3 mt-2">
                             <a class="nav-link" href="">Notifications</a>
                         </li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item dropdown"  data-user-drop-box>
                             <a class="nav-link" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">
                                 <div class="nav-user row mx-0">
