--- a/public/account/admin/login.html
+++ b/public/account/admin/login.html
@@ -44,7 +44,7 @@
                     <h1 class="h4 text-gray-900 mb-4">Welcome Back! Adminisrator</h1>
                   </div>
                   <form class="user" data-login-form>
-                    <span class="" data-key>0</span>
+                    <span class="" data-key style="visibility: hidden;">0</span>
                     <div class="form-group">
                       <input name="email" type="email" class="form-control form-control-user" id="exampleInputEmail"
                         aria-describedby="emailHelp" placeholder="Enter Email Address...">
