--- a/public/login.html
+++ b/public/login.html
@@ -72,7 +72,7 @@
                         <a class="continue-email grey bold" href="">Continue with email</a>
                     </div>
                     <form class="col-12 col-md-10 mx-auto px-0" data-login-form>
-                        <span class="" data-key>1</span>
+                        <span class="" data-key style="visibility: hidden;">1</span>
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
                             <input name="email" type="email" class="form-control" placeholder="Enter email">
