--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -53,10 +53,10 @@
                                 </div>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Saved Projects</a>
+                                <a class="dropdown-item" href="../account/user/profile-settings.html">Saved Projects</a>
                                 <a class="dropdown-item" href="../account/user/profile-settings.html">Settings</a>
                                 <a class="dropdown-item" href="#">Help</a>
-                                <a class="dropdown-item" href="#">Log Out</a>
+                                <a class="dropdown-item" data-logout style="cursor: pointer;">Log Out</a>
                             </div>
                         </li>
                     </ul>
@@ -253,5 +253,6 @@
 <script src="../js/general/onSession.js"></script>
 <script src="../js/general/searchRedirect.js"></script>
 <script src="../js/apis/searchProject.js"></script>
+<script src="../js/general/global.js"></script>
 
 </html>
