--- a/public/account/user/dashboard.html
+++ b/public/account/user/dashboard.html
@@ -34,6 +34,12 @@
                         <li class="nav-item mx-3 mt-2">
                             <a class="nav-link" href="#">Categories</a>
                         </li>
+                        <li class="nav-item mx-3 mt-2">
+                            <a class="nav-link" style="cursor: pointer;" onclick="location.href=`${window.location.origin}/project/search-results.html`">Search</a>
+                        </li>
+                        <li class="nav-item mx-3 mt-2">
+                            <a class="nav-link" href="signup.html">Notifications</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -54,9 +60,6 @@
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-3 mt-2">
-                            <a class="nav-link" href="signup.html">Notifications</a>
                         </li>
                     </ul>
                 </div>
