--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -11,6 +11,8 @@
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="../../styles/global.css">
     <link rel="stylesheet" href="../../styles/profile-settings.css">
+    <script src="../../js/general/routes.js""></script>
+    <script src=" ../../js/general/onSession.js"> </script>
 </head>
 
 <body class="roboto scroller">
@@ -38,16 +40,16 @@
                                 <div class="nav-user row mx-0">
                                     <div class="col-4 px-0">
                                         <div class="nav-image mx-auto border">
-                                            <img class="mt-1" src="../../images/user-grey.svg" alt="">
+                                            <img class="" id="nav-user-image" src="../../images/user-grey.svg" alt="">
                                         </div>
                                     </div>
-                                    <div class="col-8 px-0 pt-2">
-                                        <span class="">John Doe</span>
+                                    <div class="col-8 px-0">
+                                        <span class="" id="nav-name">John Doe</span>
                                     </div>
                                 </div>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Saved Projects</a>
+                                <a class="dropdown-item" href="dashboard.html">Dashboard</a>
                                 <a class="dropdown-item" href="#">Settings</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" href="#">Log Out</a>
@@ -64,12 +66,12 @@
                     <div class="col-12 col-md-8 row mx-0 mt-4 mx-auto image-name-location">
                         <div class="col-12 col-md-4 px-0">
                             <div class="image-con mx-auto">
-                                <img class="mt-2" src="../../images/user-grey.svg" alt="">
+                                <img class="" id="user-image" src="../../images/user-grey.svg" alt="">
                             </div>
                         </div>
                         <div class="col-12 col-md-8 text-center data-con">
-                            <p class="bold grey mb-0 pb-0">John Doe</p>
-                            <span class="grey">Port Harcourt</span>
+                            <p class="bold grey mb-0 pb-0" id="data-con-name">John Doe</p>
+                            <span class="grey" id="data-con-city">Port Harcourt</span>
                         </div>
                     </div>
                 </div>
@@ -90,7 +92,7 @@
                     <span class="setting-label grey">Your Profile Picture</span> <br>
                     <!-- <button class="btn btn-brand upload-pic-btn font-12px bold mt-3">Upload new profile picture</button> -->
                     <form class="update-data-form my-3" id="edit-profile-form">
-                        
+
                         <div class="form-group mt-2">
                             <label>Name</label>
                             <input name="name" type="text" class="form-control" required>
@@ -101,7 +103,7 @@
                         </div>
                         <div class="form-group mt-2">
                             <label>Email</label>
-                            <input name="email" type="email" class="form-control">
+                            <input name="email" type="email" class="form-control" required>
                         </div>
                         <div class="form-group mt-2">
                             <label for="">State</label>
@@ -145,8 +147,8 @@
                         <div class="input-group mb-3">
                             <span class="grey font-12px col-12 px-0">Upload new picture</span> <br>
                             <div class="custom-file">
-                                <input name="image" type="file" class="custom-file-input"  accept=".png, .jpg, .jpeg," id="upload-image-input"
-                                    aria-describedby="inputGroupFileAddon01">
+                                <input name="image" type="file" class="custom-file-input" accept=".png, .jpg, .jpeg,"
+                                    id="upload-image-input" aria-describedby="inputGroupFileAddon01">
                                 <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
                             </div>
                             <span class="grey font-12px col-12 px-0" id="file-name"></span>
@@ -163,11 +165,12 @@
                         </div>
                         <div class="form-group mt-2">
                             <label>New Password <span class="label-ast">*</span></label>
-                            <input name="password" type="password" class="form-control"id="pwd-input">
+                            <input name="password" type="password" class="form-control" id="pwd-input">
                         </div>
                         <div class="form-group mt-2">
                             <label>Repeat Password</label>
-                            <input name="password_confirmation" type="password" class="form-control" id="confirm-pwd-input">
+                            <input name="password_confirmation" type="password" class="form-control"
+                                id="confirm-pwd-input">
                         </div>
                         <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
                     </form>
@@ -213,8 +216,8 @@
                     <h5 class="grey bold mt-4 mb-2">Delete Profile</h5>
                     <span class="grey font-12px mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Voluptatum omnis voluptates doloremque cum enim?</span> <br>
-                    <button class="btn btn-brand mt-4 font-12px bold"
-                    id="delete-account-btn">Delete Account</button>
+                    <button class="btn btn-brand mt-4 font-12px bold" id="delete-modal-btn" data-toggle="modal"
+                        data-target="#deleteModal">Delete Account</button>
                 </div>
             </div>
             <footer class="col-12">
@@ -283,9 +286,36 @@
             </footer>
         </div>
     </div>
+
+    <!-- Modals -->
+    <div class="modal fade" id="alertModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    <p class="response-text mt-2 grey" id="response-text"></p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="deleteModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-body text-center">
+                    <h4>Are you sure you want to delete your account?</h4>
+                    <small class="mt-4">This action cannot be undone!</small>
+                    <div class=" mt-4 col-12 row mx-0">
+                        <button class="btn btn-success col-12 col-md mx-3 mt-2" data-dismiss="modal">Cancel</button>
+                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
+                            Delete</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 <script src="../../js/general/third_party_cdn.js""></script>
-    <script src=" ../../js/general/placeholder.js""> </script>
-    <script src="../../js/general/routes.js""></script>
-    <script src="../../js/general/onSession.js"></script>
-    <script src="../../js/apis/editProfile.js""> </script> </html>
+    <script src=" ../../js/general/placeholder.js""> </script>  <script
+    src="../../js/apis/editProfile.js""> </script>
+    <script src="../../js/manipulation/userData.js"></script>
+    </html>
