--- a/public/login.html
+++ b/public/login.html
@@ -69,10 +69,10 @@
                         </div>
                     </div>
                     <div class="col-12 col-md-10 mx-auto text-center mt-3">
-                        <a class="continue-email grey bold" href="">Continue with email</a>
+                        <span class="continue-email grey bold" id="continue-email">Continue with email</span>
                     </div>
-                    <form class="col-12 col-md-10 mx-auto px-0" data-login-form>
-                        <span class="" data-key>1</span>
+                    <form class="col-12 col-md-10 mx-auto px-0 d-none" id="use-email-form" data-login-form>
+                        <span class="data-key" data-key>1</span>
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
                             <input name="email" type="email" class="form-control" placeholder="Enter email">
@@ -84,8 +84,8 @@
                             <p class="error-fields" id="passwordError"></p>
                         </div>
                         <button type="submit" class="btn btn-brand mb-3 col-12 bold">Continue with email</button>
-                        <a href="forgotpassword.html" class="forgot-password-link grey">Forgot password?</a>
                     </form>
+                    <a href="forgotpassword.html" class="forgot-password-link grey pl-4">Forgot password?</a>
                 </div>
             </div>
             <footer class="col-12">
