--- a/public/login.html
+++ b/public/login.html
@@ -71,7 +71,7 @@
                     <div class="col-12 col-md-10 mx-auto text-center mt-3">
                         <span class="continue-email grey bold" id="continue-email">Continue with email</span>
                     </div>
-                    <form class="col-12 col-md-10 mx-auto px-0" data-login-form>
+                    <form class="col-12 col-md-10 mx-auto px-0 d-none" id="use-email-form" data-login-form>
                         <span class="" data-key style="visibility: hidden;">1</span>
                         <div class="form-group mb-2">
                             <label class="bold grey">Email</label>
