--- a/public/project/search-results.html
+++ b/public/project/search-results.html
@@ -44,16 +44,16 @@
                                 <div class="nav-user row mx-0">
                                     <div class="col-4 px-0">
                                         <div class="nav-image mx-auto border">
-                                            <img class="mt-1" src="../../images/user-grey.svg" alt="">
+                                            <img class="mt-1" data-user-image src="../../images/user-grey.svg" alt="">
                                         </div>
                                     </div>
                                     <div class="col-8 px-0 pt-2">
-                                        <span class="">John Doe</span>
+                                        <span class="" data-user-name>John Doe</span>
                                     </div>
                                 </div>
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="../account/user/profile-settings.html">Saved Projects</a>
+                                <a class="dropdown-item" href="../account/user/dashboard.html">Saved Projects</a>
                                 <a class="dropdown-item" href="../account/user/profile-settings.html">Settings</a>
                                 <a class="dropdown-item" href="#">Help</a>
                                 <a class="dropdown-item" data-logout style="cursor: pointer;">Log Out</a>
