--- a/public/account/user/dashboard.html
+++ b/public/account/user/dashboard.html
@@ -49,7 +49,7 @@
                                             <img class="" id="nav-user-image" src="../../images/user-grey.svg" alt="">
                                         </div>
                                     </div>
-                                    <div class="col-8 px-0">
+                                    <div class="col-8 px-0 mt-2">
                                         <span class="" id="nav-name">John Doe</span>
                                     </div>
                                 </div>
