--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -153,7 +153,7 @@
                             </div>
                             <span class="grey font-12px col-12 px-0" id="file-name"></span>
                         </div>
-                        <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
+                        <button type="submit" class="btn btn-brand font-12px bold" id="submitBtn">Save Information</button>
                     </form>
                 </div>
                 <div class="col-12 col-md-4 change-password my-5 border">
@@ -172,7 +172,7 @@
                             <input name="password_confirmation" type="password" class="form-control"
                                 id="confirm-pwd-input">
                         </div>
-                        <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
+                        <button type="submit" id="passBtn" class="btn btn-brand font-12px bold">Save Information</button>
                     </form>
                 </div>
                 <div class="col-12 col-md-4 email-notifs border mb-5">
@@ -306,7 +306,7 @@
                     <small class="mt-4">This action cannot be undone!</small>
                     <div class=" mt-4 col-12 row mx-0">
                         <button class="btn btn-success col-12 col-md mx-3 mt-2" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
+                        <button id="deleteBtn" class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
                             Delete</button>
                     </div>
                 </div>
