--- a/public/project/project.html
+++ b/public/project/project.html
@@ -217,7 +217,7 @@
                                                 class="form-control" placeholder="Add a public comment" required></textarea>
                                             <input  data-anonymous-spot name="anonymous" value="no" type="checkbox"><span style="color: grey; font-size: 13px;">Anonymous<span style="font-size:10px; font-style: italic;">(click to disclose you identity)</span></span>
                                         </div>
-                                        <span data-comment-error style="font-size:11px; color:tomato;">gdgdfgdfgfgfgfgf</span>
+                                        <span data-comment-error style="font-size:11px; color:tomato;"></span>
                                         <div class="col-12 text-right">
                                             <button data-comment-btn type="submit" class="btn btn-brand br-10px py-0" style="width: 30%;">Comment</button>
                                         </div>
