--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -306,7 +306,7 @@
                     <small class="mt-4">This action cannot be undone!</small>
                     <div class=" mt-4 col-12 row mx-0">
                         <button class="btn btn-success col-12 col-md mx-3 mt-2" data-dismiss="modal">Cancel</button>
-                        <button id="deleteBtn" class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
+                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
                             Delete</button>
                     </div>
                 </div>
