--- a/public/account/admin/index.html
+++ b/public/account/admin/index.html
@@ -92,7 +92,7 @@
       <hr class="sidebar-divider">
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true"
           aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
@@ -105,7 +105,7 @@
             <a class="collapse-item" href="cards.html">Cards</a>
           </div>
         </div>
-      </li>
+      </li> -->
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
@@ -205,7 +205,7 @@
                   <i class="fas fa-user fa-sm fa-fw mr-2 text-gray-400"></i>
                   Profile
                 </a>
-                <a class="dropdown-item" href="#">
+                <a class="dropdown-item" href="../../account/user/profile-settings.html">
                   <i class="fas fa-cogs fa-sm fa-fw mr-2 text-gray-400"></i>
                   Settings
                 </a>
@@ -220,7 +220,6 @@
                 </a>
               </div>
             </li>
-
           </ul>
 
         </nav>
@@ -592,7 +591,7 @@
         <div class="modal-body">Select "Logout" below if you are ready to end your current session.</div>
         <div class="modal-footer">
           <button class="btn btn-secondary" type="button" data-dismiss="modal">Cancel</button>
-          <a class="btn btn-primary" href="login.html">Logout</a>
+          <a class="btn btn-primary" data-logout>Logout</a>
         </div>
       </div>
     </div>
@@ -617,6 +616,7 @@
   <script src="js/demo/chart-pie-demo.js"></script>
   <script src=" ../../js/general/placeholder.js""> </script> <script src=" ../../js/general/admin-placeholder.js""> </script>
   <script src=" ../admin/js/getstats.js"> </script> <script src="../admin/js/uploadexcel.js"></script>
+  <script src="../../js/general/global.js"></script>
 </body>
 
 </html>
