--- a/public/account/admin/login.html
+++ b/public/account/admin/login.html
@@ -37,7 +37,7 @@
           <div class="card-body p-0">
             <!-- Nested Row within Card Body -->
             <div class="row">
-              <div class="col-lg-6 d-none d-lg-block bg-login-image"></div>
+              <div class="col-lg-6 d-none d-lg-block bg-login-image" style="width: 40px;"></div>
               <div class="col-lg-6">
                 <div class="p-5">
                   <div class="text-center">
@@ -65,13 +65,13 @@
                       Login
                     </a> -->
                     <button type="submit" class="btn btn-brand mb-3 col-12 bold">Continue with email</button>
-                    <hr>
+                    <hr style="visibility: hidden;">
 
                   </form>
                   <hr>
-                  <div class="text-center">
+                  <!-- <div class="text-center">
                     <a class="small" href="forgot-password.html">Forgot Password?</a>
-                  </div>
+                  </div> -->
 
                 </div>
               </div>
