--- a/public/account/admin/users.html
+++ b/public/account/admin/users.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>NDDC Tracker Admin - Users</title>
+  <title data-title>Users</title>
 
   <!-- Custom fonts for this template -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css" rel="stylesheet" type="text/css">
@@ -20,6 +20,7 @@
 
   <!-- Custom styles for this page -->
   <link href="js/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <script src="../../js/general/routes.js""></script>
   <script src="../../js/general/onSession.js"></script>
 
 </head>
@@ -92,7 +93,7 @@
       <hr class="sidebar-divider">
 
       <!-- Nav Item - Pages Collapse Menu -->
-      <li class="nav-item">
+      <!-- <li class="nav-item">
         <a class="nav-link collapsed" href="#" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="true" aria-controls="collapseTwo">
           <i class="fas fa-fw fa-cog"></i>
           <span>Components</span>
@@ -104,7 +105,7 @@
             <a class="collapse-item" href="cards.html">Cards</a>
           </div>
         </div>
-      </li>
+      </li> -->
 
       <!-- Divider -->
       <hr class="sidebar-divider d-none d-md-block">
@@ -312,7 +313,6 @@
 
   <!-- Page level custom scripts -->
   <script src="js/demo/datatables-demo.js"></script>
-  <script src="../../js/general/routes.js""></script>
   <script src=" ../../js/general/placeholder.js""> </script>
   <script src=" ../../js/general/admin-placeholder.js""> </script>
   <script src="../admin/js/fetchusers.js"></script>
