--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -305,9 +305,9 @@
                     <h4>Are you sure you want to delete your account?</h4>
                     <small class="mt-4">This action cannot be undone!</small>
                     <div class=" mt-4 col-12 row mx-0">
-                        <button class="btn btn-success col-12 col-md mx-3 mt-2" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
-                            Delete</button>
+                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn" style="background:none; color: tomato; border:none;">Yes,
+                                    Delete</button>
+                        <button class="btn btn-success col-12 col-md mx-3 mt-2" style="background:none; color: #0B273D; border:none; " data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
