--- a/public/login.html
+++ b/public/login.html
@@ -83,7 +83,7 @@
                             <input name="password" type="password" class="form-control" placeholder="Password">
                             <p class="error-fields" id="passwordError"></p>
                         </div>
-                        <button type="submit" class="btn btn-brand mb-3 col-12 bold">Continue with email</button>
+                        <button type="submit" class="btn btn-brand mb-3 col-12 bold" id="submitBtn">Continue with email</button>
                     </form>
                     <a href="forgotpassword.html" class="forgot-password-link grey pl-4">Forgot password?</a>
                 </div>
