--- a/public/account/user/profile-settings.html
+++ b/public/account/user/profile-settings.html
@@ -86,149 +86,82 @@
                     </div>
                 </div>
             </div>
-            <div class="settings-con col-12 mt-3 row mx-0">
-                <div class="col-12 col-md-6 px-0">
-                    <div class="col-12 col-md-8 mx-auto personal-settings mt-3 border">
-                        <h5 class="grey bold mt-4 mb-2">Personal Settings</h5>
-                        <span class="setting-label grey">Your Profile Picture</span> <br>
-                        <!-- <button class="btn btn-brand upload-pic-btn font-12px bold mt-3">Upload new profile picture</button> -->
-                        <form class="update-data-form my-3" id="edit-profile-form">
-    
-                            <div class="form-group mt-2">
-                                <label>Name</label>
-                                <input name="name" type="text" class="form-control" required>
-                            </div>
-                            <div class="form-group mt-2">
-                                <label>Bio</label>
-                                <textarea name="bio" type="text" class="form-control"></textarea>
-                            </div>
-                            <div class="form-group mt-2">
-                                <label>Email</label>
-                                <input name="email" type="email" class="form-control" required>
-                            </div>
-                            <div class="form-group mt-2">
-                                <label for="">State</label>
-                                <select name="state" class="custom-select">
-                                    <option class="fake-placeholder" value="Not selected" selected>Select a state</option>
-                                    <option value="Abia">Abia</option>
-                                    <option value="Akwa Ibom">Akwa Ibom</option>
-                                    <option value="Bayelsa">Bayelsa</option>
-                                    <option value="Cross River">Cross River</option>
-                                    <option value="Delta">Delta</option>
-                                    <option value="Edo">Edo</option>
-                                    <option value="Imo">Imo</option>
-                                    <option value="Ondo">Ondo</option>
-                                    <option value="Rivers">Rivers</option>
-                                </select>
-                            </div>
-                            <div class="form-group mt-2">
-                                <label for="">City</label>
-                                <select name="city" class="custom-select">
-                                    <option class="fake-placeholder" value="Not selected" selected>Select a city</option>
-                                    <option value="Port Harcourt">Port Harcourt</option>
-                                    <option value="Aba">Aba</option>
-                                    <option value="Yenagoa">Yenagoa</option>
-                                    <option value="Uyo">Uyo</option>
-                                    <option value="Calabar">Calabar</option>
-                                    <option value="Asaba">Asaba</option>
-                                    <option value="Benin">Benin</option>
-                                    <option value="Owerri">Owerri</option>
-                                    <option value="Akure">Akure</option>
-                                </select>
-                            </div>
-                            <div class="form-group mt-2">
-                                <label for="">Gender</label>
-                                <select name="gender" class="custom-select">
-                                    <option class="fake-placeholder" value="Not selected" selected>Select a gender</option>
-                                    <option value="Male">Male</option>
-                                    <option value="Female">Female</option>
-                                    <option value="Rather not say">Rather not say</option>
-                                </select>
-                            </div>
-                            <div class="input-group mb-3">
-                                <span class="grey font-12px col-12 px-0">Upload new picture</span> <br>
-                                <div class="custom-file">
-                                    <input name="image" type="file" class="custom-file-input" accept=".png, .jpg, .jpeg,"
-                                        id="upload-image-input" aria-describedby="inputGroupFileAddon01">
-                                    <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
-                                </div>
-                                <span class="grey font-12px col-12 px-0" id="file-name"></span>
-                            </div>
-                            <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
-                        </form>
-                    </div>
-                    <div class="col-12 col-md-8 mx-auto change-password my-5 border">
-                        <h5 class="grey bold mt-4 mb-2">Change Password</h5>
-                        <form class="change-pass-form my-3" id="change-password-form">
-                            <div class="form-group mt-2">
-                                <label>Current Password <span class="label-ast">*</span></label>
-                                <input name="old_password" type="password" class="form-control" id="old-pwd-input">
-                            </div>
-                            <div class="form-group mt-2">
-                                <label>New Password <span class="label-ast">*</span></label>
-                                <input name="password" type="password" class="form-control" id="pwd-input">
-                            </div>
-                            <div class="form-group mt-2">
-                                <label>Repeat Password</label>
-                                <input name="password_confirmation" type="password" class="form-control"
-                                    id="confirm-pwd-input">
-                            </div>
-                            <button type="submit" class="btn btn-brand font-12px bold">Save Information</button>
-                        </form>
-                    </div>
-                    <div class="col-12 col-md-8 mx-auto email-notifs border mb-5">
-                        <h5 class="grey bold mt-4 mb-2">Email Notifications</h5>
-                        <form class="email-notifs-form">
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <label class="form-check-label">
-                                    Recieve updates about your feedback
-                                </label>
-                            </div>
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <label class="form-check-label">
-                                    Recieve updates regarding your saved projects
-                                </label>
-                            </div>
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <label class="form-check-label">
-                                    Recieve updates regarding projects in your location
-                                </label>
-                            </div>
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <label class="form-check-label">
-                                    Recieve updates on new projects
-                                </label>
-                            </div>
-                            <div class="form-check mt-3">
-                                <input class="form-check-input" type="checkbox" value="">
-                                <label class="form-check-label">
-                                    Recieve newsletter from NDDC Tracker
-                                </label>
-                            </div>
-                            <button type="submit" class="btn btn-brand font-12px bold my-3">Save email notification
-                                settings</button>
-                        </form>
-                    </div>
-                    <div class="col-12 col-md-8 mx-auto delete-account border mb-5">
-                        <h5 class="grey bold mt-4 mb-2">Delete Profile</h5>
-                        <span class="grey font-12px mt-4">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Voluptatum omnis voluptates doloremque cum enim?</span> <br>
-                        <button class="btn btn-brand mt-4 font-12px bold" id="delete-modal-btn" data-toggle="modal"
-                            data-target="#deleteModal">Delete Account</button>
-                    </div>
-                </div>
-                <div class="col-12 col-md-6">
-                    <div class="col-12 col-md-10 mx-auto profile-details mt-3 border">
-                        <h5 class="grey bold mt-4 mb-2">Your Details</h5>
-                        <div class="col-12">
-                            <div class="your-image mt-3 mx-auto" id="your-image">
-                                <img src="" alt="" id="image-listed">
-                            </div>
+            <div class="settings-con col-12 mt-3">
+                <div class="col-12 col-md-4 personal-settings mt-3 border">
+                    <h5 class="grey bold mt-4 mb-2">Personal Settings</h5>
+                    <span class="setting-label grey">Your Profile Picture</span> <br>
+                    <!-- <button class="btn btn-brand upload-pic-btn font-12px bold mt-3">Upload new profile picture</button> -->
+                    <form class="update-data-form my-3" id="edit-profile-form">
 
+                        <div class="form-group mt-2">
+                            <label>Name</label>
+                            <input name="name" type="text" class="form-control" required>
+                        </div>
+                        <div class="form-group mt-2">
+                            <label>Bio</label>
+                            <textarea name="bio" type="text" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group mt-2">
+                            <label>Email</label>
+                            <input name="email" type="email" class="form-control" required>
+                        </div>
+                        <div class="form-group mt-2">
+                            <label for="">State</label>
+                            <select name="state" class="custom-select">
+                                <option class="fake-placeholder" value="Not selected" selected>Select a state</option>
+                                <option value="Abia">Abia</option>
+                                <option value="Akwa Ibom">Akwa Ibom</option>
+                                <option value="Bayelsa">Bayelsa</option>
+                                <option value="Cross River">Cross River</option>
+                                <option value="Delta">Delta</option>
+                                <option value="Edo">Edo</option>
+                                <option value="Imo">Imo</option>
+                                <option value="Ondo">Ondo</option>
+                                <option value="Rivers">Rivers</option>
+                            </select>
+                        </div>
+                        <div class="form-group mt-2">
+                            <label for="">City</label>
+                            <select name="city" class="custom-select">
+                                <option class="fake-placeholder" value="Not selected" selected>Select a city</option>
+                                <option value="Port Harcourt">Port Harcourt</option>
+                                <option value="Aba">Aba</option>
+                                <option value="Yenagoa">Yenagoa</option>
+                                <option value="Uyo">Uyo</option>
+                                <option value="Calabar">Calabar</option>
+                                <option value="Asaba">Asaba</option>
+                                <option value="Benin">Benin</option>
+                                <option value="Owerri">Owerri</option>
+                                <option value="Akure">Akure</option>
+                            </select>
+                        </div>
+                        <div class="form-group mt-2">
+                            <label for="">Gender</label>
+                            <select name="gender" class="custom-select">
+                                <option class="fake-placeholder" value="Not selected" selected>Select a gender</option>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                                <option value="Rather not say">Rather not say</option>
+                            </select>
+                        </div>
+                        <div class="input-group mb-3">
+                            <span class="grey font-12px col-12 px-0">Upload new picture</span> <br>
+                            <div class="custom-file">
+                                <input name="image" type="file" class="custom-file-input" accept=".png, .jpg, .jpeg,"
+                                    id="upload-image-input" aria-describedby="inputGroupFileAddon01">
+                                <label class="custom-file-label" for="inputGroupFile01">Choose file</label>
+                            </div>
+                            <span class="grey font-12px col-12 px-0" id="file-name"></span>
+                        </div>
+                        <button type="submit" class="btn btn-brand font-12px bold" id="submitBtn">Save Information</button>
+                    </form>
+                </div>
+                <div class="col-12 col-md-4 change-password my-5 border">
+                    <h5 class="grey bold mt-4 mb-2">Change Password</h5>
+                    <form class="change-pass-form my-3" id="change-password-form">
+                        <div class="form-group mt-2">
+                            <label>Current Password <span class="label-ast">*</span></label>
+                            <input name="old_password" type="password" class="form-control" id="old-pwd-input">
                         </div>
                         <div class="form-group mt-2">
                             <label>New Password <span class="label-ast">*</span></label>
@@ -239,9 +172,17 @@
                             <input name="password_confirmation" type="password" class="form-control"
                                 id="confirm-pwd-input">
                         </div>
-                        <div class="col-12 mb-3">
-                            <p class="grey mb-0">Email</p>
-                            <span class="grey font-12px" id="email-listed">Email here</span>
+                        <button type="submit" id="passBtn" class="btn btn-brand font-12px bold">Save Information</button>
+                    </form>
+                </div>
+                <div class="col-12 col-md-4 email-notifs border mb-5">
+                    <h5 class="grey bold mt-4 mb-2">Email Notifications</h5>
+                    <form class="email-notifs-form">
+                        <div class="form-check mt-3">
+                            <input class="form-check-input" type="checkbox" value="">
+                            <label class="form-check-label">
+                                Recieve updates about your feedback
+                            </label>
                         </div>
                         <div class="form-check mt-3">
                             <input class="form-check-input" type="checkbox" value="">
@@ -364,9 +305,9 @@
                     <h4>Are you sure you want to delete your account?</h4>
                     <small class="mt-4">This action cannot be undone!</small>
                     <div class=" mt-4 col-12 row mx-0">
-                        <button class="btn btn-success col-12 col-md mx-3 mt-2" data-dismiss="modal">Cancel</button>
-                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn">Yes,
-                            Delete</button>
+                        <button class="btn btn-danger col-12 col-md mx-3 mt-2" id="delete-account-btn" style="background:none; color: tomato; border:none;">Yes,
+                                    Delete</button>
+                        <button class="btn btn-success col-12 col-md mx-3 mt-2" style="background:none; color: #0B273D; border:none; " data-dismiss="modal">Cancel</button>
                     </div>
                 </div>
             </div>
